27/9/64 begin owner api
