# service/agentService.js
@@ -1,6 +1,6 @@
 'use strict';
 const { Op } = require("sequelize");
-const { ObjectID } = require('bson');
+const { ObjectId } = require('mongodb');
 const jwt = require("jsonwebtoken");
 const bcrypt = require("bcryptjs");
 const mysqlConnector = require("../connector/mysqlConnector")
@@ -209,6 +209,7 @@ exports.findAgentDetail = function (req) {
     (async () => {
 
       const agentTable = mysqlConnector.agent
+      const playerTable = mysqlConnector.player
 
       const agentInfo = await agentTable.findOne({
         where: {
@@ -221,21 +222,48 @@ exports.findAgentDetail = function (req) {
       const agentWalletCollec = mongoConnector.api.collection('agent_wallet')
 
       const agentWalletAmount = await agentWalletCollec.findOne({
-        _id: ObjectID(agentInfo.walletId)
+        _id: ObjectId(agentInfo.walletId)
       }, { projection: { _id: 0, amount_coin: 1 } })
 
       //find total player by agent
+      const totalPlayerOfThisAgent = await playerTable.count({
+        where: {
+          createBy: req.user.id
+        },
+        raw: true
+      })
 
       //find total player credit by agent
+      const listOfPlayerWalletId = await playerTable.findAll({
+        where: {
+          createBy: req.user.id
+        },
+        attributes: ['walletId'],
+        raw: true
+      })
 
+      const playerWalletCollec = mongoConnector.api.collection('player_wallet')
+      const totalPlayerWalletSum = await playerWalletCollec.aggregate([
+        {
+          $match: {
+            _id: { $in: listOfPlayerWalletId.map((id) => ObjectId(id.walletId)) }
+
+          }
+        },
+        {
+          $group: { _id: 0, sum: { $sum: "$amount_coin" } },
+        },
+      ]).toArray()
+
+      console.log(totalPlayerWalletSum)
       //find total promotion credit
 
-      //!!!some data of this resolve still be mock data!!!!
+      //!!!Warning. Some data of this resolve still mock data!!!!
       resolve(respConvert.successWithData({
         agentName: agentInfo.agentName,
         amountCoin: agentWalletAmount.amount_coin,
-        totalPlayer: 0,
-        totalPlayerCredit: 0,
+        totalPlayer: totalPlayerOfThisAgent,
+        totalPlayerCredit: totalPlayerWalletSum.length == 0 ? 0 : totalPlayerWalletSum[0].sum,
         totalPromotionCredit: 0
       }, req.newTokenReturn)
       );
@@ -310,33 +338,6 @@ exports.agentmpoyee = function (body) {
 }
 
 
-/**
- * payment player detail
- * Returns a single pet
- *
- * playerPaymentId Long ID of pet to return
- * returns PlayerModel
- **/
-exports.approvePlayerPayment = function (playerPaymentId) {
-  return new Promise(function (resolve, reject) {
-
-    (async () => {
-      const payment = dbPlayer.Payment;
-      const paymentlist = await payment.update({ status: 1 }, {
-        where: {
-          id: {
-            [Op.eq]: playerPaymentId
-          }
-        }
-      });
-      if (paymentlist[0] === 1) {
-        resolve({ "detail": "ok" });
-      } else {
-        resolve({ "detail": "not ok" });
-      }
-    })();
-  });
-}
 
 
 /**
@@ -537,88 +538,5 @@ exports.playerAgentRequest = function (body) {
 exports.playerAgentRequestupdate = function (body) {
   return new Promise(function (resolve, reject) {
     resolve();
-  });
-}
-
-
-/**
- * register Agent for test login
- *
- * body PlayerModel register new player witch agent refcode
- * no response value expected for this operation
- **/
-exports.registerAgent = function (body) {
-  return new Promise(function (resolve, reject) {
-
-    const { agentName, email, phoneNumber, username, password, description, status, agentRefCode } = body
-
-    if (agentName && email && phoneNumber && username && password && description || description == "" && status && agentRefCode || agentRefCode == "") {
-
-      (async () => {
-        const agentTable = mysqlConnector.agent
-
-        const checkDuplucatedUsername = await agentTable.findOne({
-          where: {
-            [Op.or]: [
-              {
-                email: email,
-              },
-              {
-                username: username
-              }
-            ]
-          }
-        });
-
-        //if not duplicate this will be 'null' value
-        if (checkDuplucatedUsername) {
-          return reject(respConvert.businessError(msgConstant.agent.duplicate_user))
-        }
-
-        //Encrypt user password
-        const encryptedPassword = await bcrypt.hash(password, 10);
-
-        const resCretedAgent = await agentTable.create({
-          agentName: agentName,
-          username: username,
-          password: encryptedPassword,
-          email: email,
-          phoneNumber: phoneNumber,
-          description: description,
-          agentRefCode: agentRefCode,
-          status: status,
-          createBy: 1,
-          createDateTime: new Date(),
-          updateBy: 1,
-          updateDateTime: new Date(),
-        });
-
-        // create agent wallet on mongo
-        const agentWalletCollec = mongoConnector.api.collection('agent_wallet')
-        const resCreatedWallet = await agentWalletCollec.insertOne({
-          agent_id: resCretedAgent.id,
-          amount_coin: 0,
-        })
-
-        //update agent wallet id
-        const updateAgentWallet = await agentTable.update(
-          {
-            walletId: resCreatedWallet.insertedId.toString()
-          },
-          {
-            where: { id: resCretedAgent.id }
-          })
-
-        resolve(respConvert.success(req.newTokenReturn));
-
-      })().catch(function (err) {
-        console.log('[error on catch] : ' + err)
-        reject(respConvert.systemError(err.message))
-      })
-
-    } else {
-      reject(respConvert.validateError(msgConstant.core.validate_error));
-    }
-
   });
 }
